fix centering of modal on Safari browser

--- a/frontend/src/components/ConfirmationModal/ConfirmationModal.scss
+++ b/frontend/src/components/ConfirmationModal/ConfirmationModal.scss
@@ -1,9 +1,7 @@
 @import '../../utils/colors';
 
 .confirmation-modal{
-	position: absolute;
-	margin: auto;
-	top: 10rem;
+	margin-top: -6rem;
 	width: 23rem;
 	height: 17rem;
   font-family: "Poppins", sans-serif;
